src/styles/npv.scss
@use "./variables.scss" as v;

.lucid-background {
  &.npv-background {
    z-index: -1;
  }
}

.Root__right-sidebar,
#Desktop_PanelContainer_Id {
  .main-nowPlayingView-contextItemInfo:before {
    display: none;
    content: none;
    visibility: hidden;
  }
  .main-nowPlayingView-nowPlayingWidget {
    order: 1;
  }
  .main-nowPlayingView-section {
    order: 3;
  }
  .lyrics-npv-card {
    order: 2;
    padding: v.$space-md v.$space-lg;

    &.is-open {
      .npv-card-header {
        padding-bottom: v.$space-md;
      }
    }
    .lyrics-area {
      --is-mobile: 1;
      --top-mask-size: 8px;
      --bottom-mask-size: 32px;

      --top-pad: max(calc((var(--npv-height) * var(--npv-height-percent)) / 10), 8px);
      --bottom-pad: max(calc((var(--npv-height) * var(--npv-height-percent)) / 1.75), 64px);

      $content-padding: 0 4cqw;

      .lenis-content {
        padding: $content-padding;
      }

      &.widget-hidden {
        .lenis-content {
          padding: $content-padding;
        }
      }
    }
  }

  .npv-card-header {
    &.auto-hide {
      transform: translate3d(-100%, 0, 0);
      opacity: 0;
      visibility: hidden;

      transition:
        transform 0.3s ease,
        opacity 0.3s ease,
        visibility 0.3s allow-discrete;

      @starting-style {
        transform: translate3d(-100%, 0, 0);
        opacity: 0;
        visibility: hidden;
      }

      .lyrics-npv-card:hover & {
        transform: translate3d(0, 0, 0);
        opacity: 1;
        visibility: visible;
      }
    }
  }

  .lucide {
    transition: transform 0.3s ease;
  }
  .rotate-icon {
    transform: rotate(180deg);
  }
  .npv-lyrics-root {
    --npv-height-percent: 0.4;
    height: calc(var(--npv-height) * var(--npv-height-percent));
    width: 100%;
    max-height: 100vh;
  }
}

.use-lucid-lyrics-npv {
  .Root__right-sidebar {
    .RDlmt3TnmiGDFq273xIf,
    .Q4LnnBmyoXc5ojyZzR5V,
    .artist-artistOnTour-date,
    .main-nowPlayingView-section,
    .main-nowPlayingView-credits {
      background-color: rgba(255, 255, 255, 0.1);
      border-radius: v.$r-md;
      border: 1px solid rgba(255, 255, 255, 0.1);

      & > button {
        background-color: transparent !important;
      }
    }

    .Q4e5h5G6qGXM2uKkgUyo {
      margin: 0 6px;
      border-radius: v.$r-md;
      &:hover,
      &:hover::after {
        background-color: rgba(255, 255, 255, 0.15) !important;
      }
    }
    .Box-group-listRow-isInteractive-minBlockSize_56px {
      &:hover::after {
        background-color: rgba(255, 255, 255, 0.15) !important;
      }
    }

    .main-nowPlayingView-section {
      &.tB3JVNYttFlVC_oYVfjI {
        margin-inline: 0;
        .main-nowPlayingView-sectionHeader {
          padding: v.$space-sm v.$space-md;
        }
        & > .search-searchCategory-contentArea {
          padding: 0 v.$space-sm v.$space-sm v.$space-sm;
        }

        .search-searchCategory-carouselButton {
          background-color: rgba(0, 0, 0, 0.2);
          border-radius: v.$r-md;
          border: 1px solid rgba(255, 255, 255, 0.1);
          overflow: hidden;
          backdrop-filter: blur(6px);
        }
      }
    }

    [data-encore-id="buttonSecondary"],
    .HzFr0RR3h12KSHxTlDOJ.kP94Cs1WuGwEMjEPrwgT {
      background-color: rgba(255, 255, 255, 0.1);
      border-radius: v.$r-md;
      border: 1px solid rgba(255, 255, 255, 0.1);
    }

    .main-nowPlayingView-aboutArtistV2Button,
    .CvxzmyND_aGd2RR8ZoSr,
    .Uw4tcZdmh7s4BMdgCCuu,
    .k90FaSa2GhsINq5izwhz {
      background-color: transparent !important;
    }

    .IkRGajTjItEFQkRMeH6v,
    .IkRGajTjItEFQkRMeH6v.f2UE9n5nZcbgZrGYTU3r {
      background: none !important;
    }

    .main-nowPlayingView-nowPlayingWidget {
      order: 0;
    }

    .os-scrollbar {
      --os-size: 6px;
      --os-handle-border-radius: 32px;
    }
    .os-scrollbar-track {
      margin-top: 64px;
      height: calc(100% - 64px);
    }

    .main-nowPlayingView-contextItemInfo:before {
      display: none;
    }
  }

  /* has canvas */
  [data-testid="NPV_Panel_OpenDiv"]:has(.u_oJcTzbq1mJ8qfhBggZ) {
    .EDzygJybL8LJ8ZCX5DuX {
      top: 4rem;
    }
    .main-nowPlayingView-section,
    .EDzygJybL8LJ8ZCX5DuX,
    .main-nowPlayingView-contextItemInfo {
      backdrop-filter: blur(var(--s-xl));
    }
  }
}

